--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,10 +86,9 @@ services:
   postgres:
     image: postgres:15
     container_name: postgres
+    env_file:
+      - .env
     environment:
-      POSTGRES_DB: smart_waste
-      POSTGRES_USER: waste_user
-      POSTGRES_PASSWORD: waste_pass
       POSTGRES_HOST_AUTH_METHOD: md5 
     ports:
       - "5432:5432"
